@@ -17,6 +17,8 @@ Version 1.8.6
        dialog. (Stefan)
 - BUG: Issue #630: svn:global-ignores not
        used when adding. (Stefan)
+- BUG: Issue #631: Assertion when showing properties
+       dialog for url. (Stefan)
 
 Version 1.8.5
 - BUG: Issue #594: "Diff with url" generated
